Verifique que funcionara el auto-fit con recuadros en blanco y si funciona, sin embargo cuando agrego las imagenes en los divs para la galeria, me da unas medidas raras y no sé exactamente porque sucede esto, arreglar en la próxima sesión de trabajo

--- a/galery.html
+++ b/galery.html
@@ -12,22 +12,76 @@
 		<header class="header"></header>
 		
 		<h2>Maquillaje de Fantasia</h2>
-		<section class="auto-fit">Fantasia</section>
+		<section class="auto-fit">
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+		</section>
 
 		<h2>Full Color</h2>
-		<section>Full Color</section>
+		<section class="auto-fit">
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+		</section>
 
 		<h2>Glam</h2>
-		<section>Glam</section>
+		<section>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+		</section>
 
 		<h2>Novia</h2>
-		<section>Novia</section>
+		<section>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+		</section>
 
 		<h2>Social</h2>
-		<section>Social</section>
+		<section>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+		</section>
 
 		<h2>XV años</h2>
-		<section>XV años</section>
+		<section>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+		</section>
 
 		<footer>
 			<div class="fbitem"></div>
