--- a/galery.html
+++ b/galery.html
@@ -35,7 +35,7 @@
 		</section>
 
 		<h2>Glam</h2>
-		<section>
+		<section class="auto-fit">
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
@@ -47,7 +47,7 @@
 		</section>
 
 		<h2>Novia</h2>
-		<section>
+		<section class="auto-fit">
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
@@ -61,7 +61,7 @@
 		</section>
 
 		<h2>Social</h2>
-		<section>
+		<section class="auto-fit">
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
@@ -74,7 +74,7 @@
 		</section>
 
 		<h2>XV años</h2>
-		<section>
+		<section class="auto-fit">
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
