--- a/galery.html
+++ b/galery.html
@@ -13,74 +13,74 @@
 		
 		<h2>Maquillaje de Fantasia</h2>
 		<section class="auto-fit">
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia1.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia2.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia3.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia4.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia5.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia6.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia7.jpg"></div>
+			<div><img src="css/galeria/fantasia/fantasia8.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
 		</section>
 
 		<h2>Full Color</h2>
 		<section class="auto-fit">
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/fullcolor/fullcolor1.jpg"></div>
+			<div><img src="css/galeria/fullcolor/fullcolor2.jpg"></div>
+			<div><img src="css/galeria/fullcolor/fullcolor3.jpg"></div>
+			<div><img src="css/galeria/fullcolor/fullcolor4.jpg"></div>
+			<div><img src="css/galeria/fullcolor/fullcolor5.jpg"></div>
 		</section>
 
 		<h2>Glam</h2>
 		<section class="auto-fit">
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/glam/glam1.jpg"></div>
+			<div><img src="css/galeria/glam/glam2.jpg"></div>
+			<div><img src="css/galeria/glam/glam3.jpg"></div>
+			<div><img src="css/galeria/glam/glam4.jpg"></div>
+			<div><img src="css/galeria/glam/glam5.jpg"></div>
+			<div><img src="css/galeria/glam/glam6.jpg"></div>
+			<div><img src="css/galeria/glam/glam7.jpg"></div>
+			<div><img src="css/galeria/glam/glam8.jpg"></div>
 		</section>
 
 		<h2>Novia</h2>
 		<section class="auto-fit">
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/novia/novia1.jpg"></div>
+			<div><img src="css/galeria/novia/novia2.jpg"></div>
+			<div><img src="css/galeria/novia/novia3.jpg"></div>
+			<div><img src="css/galeria/novia/novia4.jpg"></div>
+			<div><img src="css/galeria/novia/novia5.jpg"></div>
+			<div><img src="css/galeria/novia/novia6.jpg"></div>
+			<div><img src="css/galeria/novia/novia7.jpg"></div>
+			<div><img src="css/galeria/novia/novia8.jpg"></div>
+			<div><img src="css/galeria/novia/novia9.jpg"></div>
+			<div><img src="css/galeria/novia/novia10.jpg"></div>
 		</section>
 
 		<h2>Social</h2>
 		<section class="auto-fit">
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
+			<div><img src="css/galeria/social/social1.jpg"></div>
+			<div><img src="css/galeria/social/social2.jpg"></div>
+			<div><img src="css/galeria/social/social3.jpg"></div>
+			<div><img src="css/galeria/social/social4.jpg"></div>
+			<div><img src="css/galeria/social/social5.jpg"></div>
+			<div><img src="css/galeria/social/social6.jpg"></div>
+			<div><img src="css/galeria/social/social7.jpg"></div>
+			<div><img src="css/galeria/social/social8.jpg"></div>
+			<div><img src="css/galeria/social/social9.jpg"></div>
 		</section>
 
 		<h2>XV años</h2>
 		<section class="auto-fit">
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia9.jpg"></div>
-			<div><img src="css/galeria/fantasia/fantasia10.jpg"></div>
+			<div><img src="css/galeria/xv/xv1.jpg"></div>
+			<div><img src="css/galeria/xv/xv2.jpg"></div>
+			<div><img src="css/galeria/xv/xv3.jpg"></div>
+			<div><img src="css/galeria/xv/xv4.jpg"></div>
+			<div><img src="css/galeria/xv/xv5.jpg"></div>
+			<div><img src="css/galeria/xv/xv6.jpg"></div>
 		</section>
 
 		<footer>
