Corregí detalles de responsividad, falta arreglar footer responsivo para ambas páginas y menú

--- a/galery.html
+++ b/galery.html
@@ -11,7 +11,7 @@
 	<main>
 		<header class="header"></header>
 		
-		<h2>Maquillaje de Fantasia</h2>
+		<h2>Fantasia</h2>
 		<section class="auto-fit">
 			<div><img src="css/galeria/fantasia/fantasia1.jpg"></div>
 			<div><img src="css/galeria/fantasia/fantasia2.jpg"></div>
