--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 				9:00am a 6:00pm<br/>
 				Domingos CERRADO</p>
 			</div>
-			<div></div>
+			<section><img src="css/imagenes/local.png"></section>
+			
 		</div>
 
 		<footer>
