--- a/galery.html
+++ b/galery.html
@@ -9,7 +9,27 @@
 </head>
 <body>
 	<main>
-		<header class="header"></header>
+		<header class="header">
+			<div class="container">
+				<nav>
+					<input type="checkbox" id="nav"	class="hidden">
+					<label for="nav" class="nav-btn">
+						<i></i>
+						<i></i>
+						<i></i>
+					</label>
+					<div class="logo">
+						<a href="index.html">Daniela Morga</a>
+					</div>
+					<div class="nav-wrapper">
+						<ul>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="galery.html">Galeria</a></li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		</header>
 		
 		<h2>Fantasia</h2>
 		<section class="auto-fit">
@@ -84,9 +104,9 @@
 		</section>
 
 		<footer>
-			<div class="fbitem"></div>
-			<div class="instaitem"></div>
-			<div class="wearevelut"></div>
+			<div class="fbitem" onclick="window.open('https://www.facebook.com/danielamorgaMUA/')" ></div>
+			<div class="instaitem" onclick="window.open('https://www.instagram.com/danielamorgamua/')"></div>
+			<div class="wearevelut" onclick="window.open('https://www.instagram.com/wearevelut/')"></div>
 		</footer>
 	</main>
 </body>
